# incubis

./: .gitignore  pyproject.toml
incubis/: pyproject.toml
incubis/incubis/core/: database.py
incubis/incubis/models/: avaliacao_model.py  equipe_model.py  formacao_academica_model.py  integrante_model.py  planejamento_model.py  proponente_model.py  setor_model.py
